assets/stylesheets/babble.css
/* Dropdown styles */
.babble-icon {
  position: relative;
}

/* Post styles */
.babble-posts {
  max-height: 300px;
  overflow: auto;
}

.babble-post .babble-post-avatar a,
.babble-post .post-date {
  background-color: transparent !important; /* sorry mom. */
}

.babble-post {
  position: relative;
  list-style-type: none;
}

.babble-post:hover {
  background-color: #f8f8ff;
}

.babble-post-content {
  display: table-cell;
  vertical-align: top;
}

.babble-post-content .post-info {
  width: 40px;
  text-align: right;
}

.babble-last-read-post-message {
  font-size: 8px;
  float: right;
  line-height: 28px;
  padding-left: 5px;
}

li.babble-post .babble-post-content a.mention {
  display: inline;
  padding: 0;
}

.babble-post-avatar img {
  float: left;
  width: 20px;
  height: 20px;
  margin-right: 5px;
}

.babble-post-body {
  padding-top: 5px;
  width: 100%;
}

.babble-post-info {
  padding-top: 5px;
}

.babble-post-meta-data {
  padding-top: 5px;
}

.babble-post .post-info {
  display: inline-block;
}

.babble-post .post-date {
  padding: 5px 0 0 0;
}

.babble-post .read-state {
  position: static;
  display: inline-block;
}

.babble-post-composer textarea {
  width: 100%;
  box-sizing: border-box;
  padding: 5px;
  margin: 0;
  resize: none;
}

.d-header .icons .unread-notifications.babble-unread-notifications {
  right: auto;
  left: -4px;
}

.babble-post .babble-post-body .cooked img {
  max-width: 245px;
}

.babble-composer-error-message {
  color: red;
  font-size: 10px;
  float: right;
  padding-right: 10px;
}

